<resources>
    <string name="app_name">BookMyHostel</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_an_account">Create an Account</string>
    <string name="not_registred">Not Registred ?</string>
    <string name="address">Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="name">Name</string>
    <string name="email_address">Email</string>
    <string name="passwords">Password</string>
    <string name="buyer">Buyer</string>
    <string name="saller">Saller</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="profile">profile</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact</string>
    <string name="log_out">Log out</string>
    <string name="my_image">my image</string>
    <string name="open_dawer">Open Navigation drawer</string>
    <string name="close_drawer">Close Navigation drawer</string>
    <string name="logout">Log Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="aboutus">About us</string>
    <string name="change_password">Change Password</string>
    <string name="bookmark">Bookmark</string>
    <string name="hostel">Hostel</string>
    <string name="profiles">Profile</string>
</resources>
