<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:id="@+id/Register_Activity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_id"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_id"
        android:id="@+id/name_textinputlayout"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Name_EditText"
            android:hint="@string/name"
            android:inputType="textPersonName"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_textinputlayout"
        android:id="@+id/Email_textinputlayout"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Email_EditText"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email_textinputlayout"
        android:id="@+id/password_textinputlayout"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_EditText"
            android:hint="@string/passwords"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_textinputlayout"
        android:id="@+id/mobile_textinputlayout"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Mobile_EditText"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile_textinputlayout"
        android:id="@+id/address_textinputlayout"
        android:layout_marginTop="10dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        >

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Address_EditText"
            android:hint="@string/address"
            android:inputType="textPersonName"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_textinputlayout"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:id="@+id/radio_layout">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/Radio_group">
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/buyer"
                android:layout_marginRight="5dp"
                android:id="@+id/Buyer_Radio"
                />
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/saller"
                android:id="@+id/Saller_Radio"
                />
        </RadioGroup>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_layout"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_Register"
        android:text="@string/register"
        style="@style/Button"
        />




</RelativeLayout>